<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bin_search"
            android:textColor="@color/white"/>
    </com.google.android.material.appbar.MaterialToolbar>


    <TextView
        android:id="@+id/et_search"
        style="@style/AllEditText"
        android:layout_height="52dp"
        android:hint="@string/enter_rfid"
        android:layout_marginStart="18dp"
        android:gravity="start|center"
        android:layout_marginEnd="18dp"
        android:paddingStart="8pt"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_reading"
        style="@style/button_style"
        android:layout_width="150dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        app:cornerRadius="16dp"
        android:elevation="8dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="@+id/et_search"
       app:layout_constraintTop_toBottomOf="@+id/et_search"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/blue"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:weightSum="8"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_reading">

        <TextView
            style="@style/txt_hori_heading"
            android:text="@string/part_no"
            android:layout_marginStart="18dp"
            android:layout_weight="4"/>

        <TextView
            style="@style/txt_hori_heading"
            android:layout_weight="2"
            android:text="@string/pkg_part_no"/>
        <TextView
            style="@style/txt_hori_heading"
            android:layout_weight="2"
            android:text="@string/lot_size" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ll"/>

    <TextView
        android:id="@+id/tv_respone_heading"
        style="@style/txt_view_heading"
        android:text="@string/response"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list" />

    <TextView
        style="@style/txt_view_heading_normal"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_respone_heading"
        app:layout_constraintTop_toTopOf="@+id/tv_respone_heading"
        app:layout_constraintStart_toEndOf="@+id/tv_respone_heading"/>


</androidx.constraintlayout.widget.ConstraintLayout>