<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bin_scrap.BinScrap">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">






<!--        <ImageView-->
<!--            android:id="@+id/im_back"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@drawable/ic_baseline_arrow_back" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bin_scrap"
            android:textColor="@color/white"/>
    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/tv_scrap"
        style="@style/AllEditText"
        android:layout_height="52dp"
        android:hint="@string/enter_rfid"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:gravity="start|center"
        android:paddingStart="8pt"
        android:visibility="gone"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_scraping"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="2dp"
        app:cornerRadius="16dp"
        android:elevation="8dp"
        android:text="@string/start_scraping"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"/>


    <TextView
        android:id="@+id/tv_read_tag"
        style="@style/txt_view_heading_normal"
        android:text="Total tag count:"
        android:layout_marginStart="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_scraping"
        app:layout_constraintStart_toStartOf="@+id/btn_start_scraping"/>

    <TextView
        android:id="@+id/no_read_tags"
        style="@style/txt_view_heading_normal"
        android:text="0"
        android:layout_marginStart="3dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_read_tag"
        app:layout_constraintStart_toEndOf="@+id/tv_read_tag"
        app:layout_constraintTop_toTopOf="@+id/tv_read_tag"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/blue"
        android:gravity="start|center"
        android:visibility="gone"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:weightSum="8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_scraping">

        <TextView
            style="@style/txt_hori_heading"
            android:text="@string/rfid_tag"
            android:layout_marginStart="18dp"
            android:layout_weight="2"/>

        <TextView
            style="@style/txt_hori_heading"
            android:layout_weight="2"
            android:text="@string/pkg_part_no"/>

        <TextView
            style="@style/txt_hori_heading"
            android:layout_weight="2"
            android:text="@string/lot_size"/>




    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_respone_heading"
        style="@style/txt_view_heading"
        android:text="@string/response"
        app:layout_constraintTop_toBottomOf="@+id/no_read_tags"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_response"
        style="@style/txt_view_heading_normal"
        android:layout_marginTop="0dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/tv_respone_heading"
        app:layout_constraintTop_toTopOf="@+id/tv_respone_heading"
        app:layout_constraintStart_toEndOf="@+id/tv_respone_heading"/>


    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_response"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view"
            style="@style/button_style"
            android:text="View"
            android:layout_marginTop="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm_scraping"
            style="@style/button_style"
            android:text="@string/confirm_scraping"
            android:layout_marginTop="12dp"/>

    </LinearLayout>





    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_0f_Rfid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/inventory_tag"
        tools:itemCount="4"
        android:layout_marginTop="250dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/ll3"
        app:layout_constraintStart_toStartOf="@+id/ll3"
        app:layout_constraintEnd_toEndOf="@+id/ll3"/>


<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/scrap_list"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="18dp"-->
<!--        android:layout_marginEnd="18dp"-->
<!--        android:layout_marginTop="12dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/ll"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->



</androidx.constraintlayout.widget.ConstraintLayout>